--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,14 @@
         args: [--fix]
       - id: ruff-format
 
-  # Temporarily disabled until source code is implemented
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.10.0
-  #   hooks:
-  #     - id: mypy
-  #       additional_dependencies: [pydantic>=2.0]
-  #       args: [--ignore-missing-imports]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.19.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - "pydantic[mypy]>=2.0"
+          - "pydantic-settings>=2.0"
+        args: [--ignore-missing-imports]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
