--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: mypy src
 
       - name: Run tests
-        run: pytest tests -v --cov=src/hoi4_rag --cov-report=xml
+        run: pytest tests -v --cov=src --cov-report=xml
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
